--- a/scss/common/_common.scss
+++ b/scss/common/_common.scss
@@ -2,7 +2,9 @@
 @import "variables";
 @import "mixins";
 @import "utlities";
-@import "buttons_form";
+@import "button";
+@import "fonts";
+@import "form";
 
 
 /** HEADER MENU **/
