Add new partials and variables

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,3 +12,6 @@
 @import "pages/index";
 @import "pages/other";
 @import "pages/single";	
+@import "pages/404";
+@import "pages/login";
+@import "pages/register";
