--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 
 @import '../node_modules/bootstrap/scss/bootstrap';
-
+@import '../node_modules/font-awesome/scss/font-awesome';
 
 
 @mixin include_foundation_site_framework{
