--- a/scss/common/_common.scss
+++ b/scss/common/_common.scss
@@ -47,3 +47,14 @@ aside {}
         padding-bottom: 30px;
     }
 }
+
+
+.d-flex{
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 100%;
+	> * {
+		flex-basis: auto;
+		max-width: 100%;
+	}
+}
