Add variable to sass files

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,16 @@
 
-@import '../node_modules/bootstrap/scss/bootstrap';
-@import '../node_modules/font-awesome/scss/font-awesome';
+$framework: "middleman"!default;
+$node_module_path: "../../node_modules";
+
+@if($framework == 'middleman'){
+	@import '../../node_modules/bootstrap/scss/bootstrap';
+	@import '../../node_modules/font-awesome/scss/font-awesome';
+}@else if($framework == 'wordpress'){
+	@import '../node_modules/bootstrap/scss/bootstrap';
+	@import '../node_modules/font-awesome/scss/font-awesome';
+}
+
+
 
 
 @mixin include_foundation_site_framework{
